--- a/임종한/assets/css/style.css
+++ b/임종한/assets/css/style.css
@@ -368,7 +368,6 @@
 
 #section4 {
     padding: 20% 0 10%;
-    height: 4000px;
 }
 
 #section4 .title {
@@ -430,10 +429,14 @@
 
 .about-wrap .left {
     width: 50%;
+    height: 100vh;
     padding-bottom: 60%;
     background-image: url(../img/dd.jpg);
     background-size: cover;
     background-position: center center;
+    position: sticky;
+    left: 0;
+    top: 90px;
 }
 
 .about-wrap .right {
@@ -453,4 +456,195 @@
     font-family: 'IropkeBatang';
     margin-bottom: 50px;
     line-height: 1.7;
+}
+
+
+#section5 {
+    padding: 20% 0 10%;
+}
+
+#section5 .title {
+    font-family: 'GmarketSans';
+    text-align: left;
+    font-size: 8vw;
+    line-height: 1;
+    text-transform: uppercase;
+    font-weight: 900;
+    position: relative;
+    margin-bottom: 7%;
+    padding: 0 5%;
+}
+
+#section5 .title .t1 {
+    padding-left: 14vw;
+}
+
+#section5 .title .img {
+    width: 12vw;
+    height: 6.6vw;
+    background-image: url(https://source.unsplash.com/500x500/?color);
+    background-size: cover;
+    background-position: center;
+    display: block;
+    position: absolute;
+    left: 5.5%;
+    top: 0.6vw;
+    border-radius: 10px;
+    background-color: #000;
+}
+
+#section5 .title .desc {
+    font-family: 'IropkeBatang';
+    line-height: 1.6;
+    font-size: 16px;
+    color: #202020;
+    font-weight: normal;
+    padding-left: 0.5vw;
+    text-decoration: underline;
+    text-underline-position: under;
+}
+
+#section5 .title .desc2 {
+    padding-top: 30px;
+    font-family: 'IropkeBatang';
+    line-height: 1.6;
+    font-size: 16px;
+    color: #202020;
+    font-weight: normal;
+    padding-left: 0.5vw;
+}
+
+.comment__wrap {
+    width: 100%;
+    overflow: hidden;
+}
+
+.comment__inner {
+    display: flex;
+    width: 3000px;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.comment__inner .comment {
+    width: 300px;
+    border: 1px solid #61616136;
+    padding: 20px;
+    border-radius: 10px;
+    font-family: 'IropkeBatang';
+}
+
+.comment__inner .comment .author {
+    margin-bottom: 10px;
+}
+
+.comment__inner .comment em {
+    text-decoration: underline;
+    text-underline-position: under;
+    margin-bottom: 10px;
+}
+
+.comment__inner .comment span {
+    opacity: 0.5;
+}
+
+.comment__inner:nth-child(2) {
+    margin-left: -200px;
+}
+
+.comment__input {
+    text-align: center;
+    padding: 50px;
+}
+
+.comment__input input {
+    border: 1px solid #ccc;
+    font-family: 'IropkeBatang';
+    padding: 3px 10px;
+}
+
+.comment__input button {
+    border: 1px solid #ccc;
+    font-family: 'IropkeBatang';
+    padding: 3px 10px;
+}
+
+
+
+#section6 {
+    padding: 20% 0 10%;
+}
+
+#section6 .title {
+    font-family: 'GmarketSans';
+    text-align: left;
+
+    line-height: 1;
+    text-transform: uppercase;
+    font-weight: 900;
+    position: relative;
+    margin-bottom: 7%;
+    padding: 0 5%;
+}
+
+#section6 .title .t1 {
+    padding-left: 0;
+    font-size: 8vw;
+}
+
+#section6 .title .t2 {
+    text-align: right;
+    font-size: 4vw;
+    line-height: 1.3;
+    font-family: 'GmarketSans';
+    font-weight: 100;
+    text-transform: capitalize;
+    border-top: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
+    padding: 50px 0;
+    margin-top: 50px;
+}
+
+#section6 .title ul {
+    text-align: right;
+    margin-top: 30px;
+}
+
+#section6 .title li a {
+    font-size: 20px;
+    line-height: 1.4;
+    font-family: 'GmarketSans';
+    font-weight: 400;
+    padding: 0;
+    margin: 0;
+}
+
+#section6 .title li strong {
+    font-size: 14px;
+    font-weight: 700;
+    opacity: 0.5;
+    margin-bottom: 15px;
+    display: inline-block;
+    font-family: "Josefin Slab";
+}
+
+#section6 .title .list {
+    display: flex;
+    justify-content: flex-end;
+}
+
+#section6 .title .list ul {
+    margin-left: 100px;
+}
+
+#section6 .title .address {
+    text-align: right;
+    margin-top: 100px;
+}
+
+#section6 .title .address p {
+    font-family: 'IropkeBatang';
+    color: #9d9d9d;
+    font-size: 14px;
+    padding-top: 10px;
 }
