--- a/권초록/assets/css/style3.css
+++ b/권초록/assets/css/style3.css
@@ -420,9 +420,9 @@
     width: 35%;
     height: 500px;
     background-color: #ccc;
-    background-image: url('https://images.unsplash.com/photo-1616400619175-5beda3a17896?q=80&w=3948&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    /* background-image: url('https://images.unsplash.com/photo-1616400619175-5beda3a17896?q=80&w=3948&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-position: center;
-    background-size: cover;
+    background-size: cover; */
 }
 
 .sec5__inner .work.work3 .right {
