--- a/윤지성/assets/css/style.css
+++ b/윤지성/assets/css/style.css
@@ -43,6 +43,14 @@
     padding: 3px 36px;
     color: #fff;
     position: relative;
+    width: 10px;
+    transition: width 0.3s;
+    outline: none;
+}
+
+.footer__info .search input:focus {
+    width: 250px;
+    border: 1px solid #ffffff;
 }
 
 .footer__info .search span {
@@ -90,16 +98,14 @@
 
 .layer {
     width: 80vw;
-    height: 80vh;
+    height: 86vh;
     position: absolute;
     left: 50%;
     transform: translatex(-50%);
     bottom: 80px;
     border-radius: 1px;
-    opacity: 0;
     color: #fff;
     font-family: "nanumSquareNeo";
-    display: none;
 }
 
 .layer__contents {
@@ -109,6 +115,7 @@
     border-radius: 10px 10px 0 0;
     padding: 5%;
     overflow-y: scroll;
+    position: relative;
 }
 
 .layer__footer {
@@ -125,6 +132,22 @@
     border-radius: 0 0 10px 10px;
 }
 
+.layer__footer .ment {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.layer__footer .close {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: 23px;
+    height: 23px;
+    background-image: url('../img/close.svg');
+    background-size: cover;
+    cursor: pointer;
+}
+
 
 /* youtube */
 .youtube h3 {
@@ -134,6 +157,13 @@
 
 .youtube .small {
     font-size: 16px;
+}
+
+.youtube .small em {
+    font-size: 13px;
+    line-height: 1.5;
+    opacity: 0.8;
+    padding-left: 10px;
 }
 
 .youtube .mail {
@@ -167,14 +197,20 @@
     height: 13px;
     background-color: #78828a44;
     position: absolute;
-    left: 235px;
-    top: 17px;
+    left: 217px;
+    top: 13px;
 }
 
 .youtube .info li {
     display: inline-block;
-    color: #78828A;
-    padding: 5px 10px;
+    color: #a7b7c4;
+    padding: 5px 20px;
+}
+
+.youtube .info li.active {
+    background-color: #ffffff20;
+    border-radius: 40px;
+    color: #fff;
 }
 
 .youtube .info li:first-child {
@@ -182,33 +218,43 @@
 }
 
 .youtube .info input {
-    border: 1px solid rgba(173, 166, 207, 0.671);
+    border: 1px solid #ffffff58;
     background-color: #78828a0a;
     backdrop-filter: blur(20px);
-    padding: 10px 16px;
+    padding: 8px 16px;
     border-radius: 100px;
     outline: none;
     color: #fff;
     margin-right: 36px;
+    font-size: 14px;
+}
+
+.youtube .info input::placeholder {
+    color: #fff;
+    font-size: 14px;
 }
 
 .youtube .view {
-    display: flex;
+    /* display: flex;
     flex-wrap: wrap;
+    justify-content: space-between; */
     margin-top: 30px;
-    justify-content: space-between;
     overflow-y: scroll;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 20px;
 }
 
 .youtube .view>div {
-    width: 32.333%;
+    /* width: 32.333%; */
     margin-bottom: 2%;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 .youtube .view>div .img {
     width: 100%;
     padding-bottom: 56.25%;
-
 }
 
 .youtube .view>div .img {
@@ -217,13 +263,38 @@
     background-size: cover;
 }
 
-.youtube .view>div .title {
-    background-color: #ffffff23;
-    padding: 5px 10px;
+.youtube .view>div:nth-child(2) .img {
+    background-image: url(https://i.ytimg.com/vi/k3hKLd7vYZ8/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBMdjxFQkiCgZtO_ycHMemaIfLNVw);
+    background-position: center center;
+    background-size: cover;
 }
 
+.youtube .view>div:nth-child(3) .img {
+    background-image: url(https://i.ytimg.com/vi/ame1fRO7--4/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBL3owYZZQKQLQ4bBfv1_7l2ssV0g);
+    background-position: center center;
+    background-size: cover;
+}
 
-.layer.react {}
+.youtube .view>div:nth-child(4) .img {
+    background-image: url(https://i.ytimg.com/vi/k3hKLd7vYZ8/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBMdjxFQkiCgZtO_ycHMemaIfLNVw);
+    background-position: center center;
+    background-size: cover;
+}
+
+.youtube .view>div:nth-child(5) .img {
+    background-image: url(https://i.ytimg.com/vi/k3hKLd7vYZ8/hq720.jpg?sqp=-oaymwEcCNAFEJQDSFXyq4qpAw4IARUAAIhCGAFwAcABBg==&rs=AOn4CLBMdjxFQkiCgZtO_ycHMemaIfLNVw);
+    background-position: center center;
+    background-size: cover;
+}
+
+.youtube .view>div .title {
+    background-color: #ffffff23;
+    padding: 10px 20px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
 
 .layer.react .layer__contents h3 {
     margin-bottom: 5px;
@@ -280,16 +351,16 @@
 
 
 /* layout - about */
-.about h3 {
+.aboutLayer h3 {
     margin-bottom: 5px;
     font-size: 25px;
 }
 
-.about .small {
+.aboutLayer .small {
     font-size: 16px;
 }
 
-.about .mail {
+.aboutLayer .mail {
     display: block;
     font-size: 12px;
     margin-top: 30px;
@@ -297,7 +368,7 @@
     color: #c9c9c9
 }
 
-.about .mail::before {
+.aboutLayer .mail::before {
     content: '';
     width: 50px;
     height: 1px;
@@ -307,23 +378,74 @@
     top: -16px;
 }
 
-.about .intro1 {
+.aboutLayer .intro1 {
     margin-top: 30px;
     font-size: 18px;
     line-height: 1.5;
     word-break: keep-all;
 }
 
-.about .intro2 {
+.aboutLayer .intro2 {
     margin-top: 20px;
     font-size: 13px;
     line-height: 1.5;
     opacity: 0.8;
 }
 
-/* .wallpapers>div {
-    transform: translateX(-100px);
-} */
+.aboutLayer .list {
+    margin-top: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.aboutLayer .list dl {
+    width: 48.5%;
+}
+
+.aboutLayer .list dt {
+    border-bottom: 1px solid #fff;
+    padding: 5px 0;
+    margin-bottom: 10px;
+}
+
+.aboutLayer .list dd {
+    padding: 1px 0;
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-bottom: 10px;
+    text-align: justify;
+}
+
+.aboutLayer .list dd em {
+    text-decoration: underline;
+    text-underline-position: under;
+    display: block;
+    margin-bottom: 4px;
+}
+
+.aboutLayer .me {
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: none;
+}
+
+@media (max-width: 800px) {
+    .aboutLayer .list dl {
+        width: 100%;
+    }
+}
+
+
+
+
+
+
 
 .wallpapers .introIcon {
     width: 75px;
@@ -649,5 +771,20 @@
     100% {
         transform: rotate(945deg);
         opacity: 0;
+    }
+}
+
+
+@media (max-width: 800px) {
+    .layer {
+        width: 94vw;
+        height: 90vh;
+    }
+}
+
+@media (max-width: 600px) {
+    .layer {
+        width: 94vw;
+        height: 90vh;
     }
 }
