--- a/윤지성/assets/css/style.css
+++ b/윤지성/assets/css/style.css
@@ -1,97 +1,159 @@
-#mainIntro {
-    width: 100%;
-    height: 100vh;
-    background-image: url(../img/Wallpaper.jpg);
-    background-position: center center;
-    background-size: cover;
-}
-
-.footer__info {
+#header {
     position: fixed;
     left: 0;
-    bottom: 0;
+    top: 0;
+    z-index: 2000;
     width: 100%;
     background-color: #00000083;
     backdrop-filter: blur(16px);
-    text-align: center;
-}
-
-.footer__info.load {
-    height: 100%;
-}
-
-.footer__info.load .menu {
-    opacity: 0;
-}
-
-.footer__info {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.footer__info .search {
-    padding-left: 20px;
-    position: relative;
-}
-
-.footer__info .search input {
-    background: #ffffff04;
-    backdrop-filter: blur(5px);
-    border: 1px solid #ffffff38;
-    border-radius: 50px;
-    padding: 3px 36px;
+#header h1 {
     color: #fff;
+    font-size: 12px;
+    padding: 10px 20px 12px 30px;
+    font-family: 'GmarketSans';
+    font-weight: bold;
+    text-transform: uppercase;
     position: relative;
-    width: 10px;
-    transition: width 0.3s;
-    outline: none;
 }
 
-.footer__info .search input:focus {
-    width: 250px;
-    border: 1px solid #ffffff;
-}
-
-.footer__info .search span {
-    position: absolute;
-    left: 34px;
-    top: 8px;
+#header h1::before {
+    content: '';
     width: 14px;
     height: 14px;
-    background: transparent;
-    background-image: url('../img/search.svg');
+    background-image: url(../img/star.svg);
+    background-size: cover;
+    position: absolute;
+    left: 10px;
+    top: 11px;
+}
+
+#header .time {
+    color: #fff;
+    padding-right: 20px;
+    font-size: 14px;
+    color: #cccccc;
+    font-family: 'GmarketSans';
+}
+
+#header .time em {
+    font-weight: bold;
+}
+
+#mainIntro {
+    width: 100%;
+    height: 100vh;
+    background-image: url(../img/bg1.jpg);
+    background-position: center center;
+    background-size: cover;
+    position: relative;
+    z-index: 2;
+}
+
+#mainIntro::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000021;
+    z-index: -1;
+}
+
+.about {
+    padding-top: 60px;
+    padding-left: 20px;
+    color: #fff;
+    font-family: 'eulyoo1945';
+    color: #c0c0c0;
+    line-height: 1.5;
+    font-size: 14px;
+}
+
+.about p {
+    width: fit-content;
+    padding: 1rem;
+    border-radius: 10px;
+    transition: all 0.3s;
+}
+
+.about p:hover,
+.about p.hover {
+    cursor: pointer;
+    background-color: #00000083;
+    backdrop-filter: blur(16px);
+    transition: all 0.3s;
+    color: #e8e8e8;
+}
+
+.about p span {
+    display: inline-block;
+    font-weight: bold;
+}
+
+.about p em {
+    position: absolute;
+    right: -9px;
+    top: -9px;
+    width: 23px;
+    height: 23px;
+    background-image: url('../img/close.svg');
     background-size: cover;
 }
 
+.about h1 {
+    padding: 1rem;
+    font-family: 'NeoGeoTrial-Regular';
+    font-family: 'NeoGeoTrial-ExtraLight';
+    font-family: 'NeoGeoTrial-Book';
+    font-family: 'NeoGeoTrial-Bold';
+    font-family: 'NeoGeoTrial-Medium';
+    font-family: 'NeoGeoTrial-Thin';
+    font-size: 180px;
+    line-height: 1;
+    text-transform: uppercase;
+    padding-top: 0;
+}
 
-.footer__info .menu {
-    padding: 10px;
+.footer__info {
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 10px;
+    width: 560px;
+    background-color: #00000083;
+    backdrop-filter: blur(16px);
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 50px;
 }
 
 .footer__info .menu ul {
     display: flex;
+    align-items: start;
+    justify-content: center;
 }
 
 .footer__info .menu li {
     width: 40px;
     height: 40px;
-    background: transparent;
-    border-radius: 5px;
-    transition: background 0.2s;
+    line-height: 40px;
+    background: #ccc;
+    border-radius: 15px;
+    margin: 5px;
+    background-color: #0000007d;
+    background-size: cover;
+    background-position: center;
+    color: #fff;
 }
 
-.footer__info .menu li:hover {
-    background: #ffffff23;
-}
-
-.footer__info .menu li a {
-    padding: 7px;
-    display: inline-block;
-}
-
-.footer__info .menu img {
-    width: 25px;
+.footer__info .menu li:nth-child(1) {
+    background-image: url(../img/vite.png);
 }
 
 
@@ -117,6 +179,23 @@
     overflow-y: scroll;
     position: relative;
 }
+
+.layer__contents .head {
+    display: flex;
+}
+
+.layer__contents .head .face {
+    width: 180px;
+    height: 240px;
+    margin-right: 20px;
+    background-image: url(../img/nib.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 5px;
+}
+
+.layer__contents .head .name {}
 
 .layer__footer {
     position: absolute;
