--- a/박진아/assets/css/style.css
+++ b/박진아/assets/css/style.css
@@ -1,58 +1,57 @@
-#header {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
-    z-index: 1000;
-}
-
 #header h1 {
-    font-family: 'CondensedRegular';
-    font-size: 100px;
+    font-family: 'AfricaTrial-Rainfall';
+    font-size: 14vw;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1100;
+    transform: translate(-50%, -50%);
+    line-height: 2.9;
+    text-transform: capitalize;
 }
 
-#header .right {
-    text-align: right;
+#header h1 span {
+    display: block;
+    text-align: center;
 }
 
-#header .right nav ul {
+#header h1 span:nth-child(2) {
+    transform: rotate(180deg);
+}
+
+#header .menu {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    width: 100%;
+}
+
+#header .menu.bg {
+    background: #ffffff63;
+    backdrop-filter: blur(10px);
+}
+
+#header .menu ul {
     display: flex;
-    justify-content: flex-end;
-    gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+#header .menu ul li {
+    padding: 10px;
+    font-family: 'NeoGeoTrial-Light';
     text-transform: uppercase;
-    margin-bottom: 20px;
+    color: #000;
+    font-size: 14px;
 }
 
-#header .right nav li {
-    font-family: 'Abel';
-}
 
-#header .right p {
-    width: 500px;
-    font-family: 'IropkeBatang';
-    opacity: 0;
-    transform: translateY(50);
-}
 
 #section1 {
     width: 100%;
     height: 100vh;
-}
-
-#section1 .eye {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    background-image: url(../img/a.png);
-    background-size: 500px;
-    background-position: center top 50px;
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-    z-index: 9000;
 }
 
 #section1 .bg {
@@ -61,15 +60,121 @@
     background-image: url(../img/bg-min.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     margin: 0 auto;
+}
+
+#section1 .desc {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    font-family: 'IropkeBatang';
 }
 
 #section2 {
     width: 100%;
-    height: 1000px;
-    background-color: #ddd;
+    background-color: #000;
+    padding: 10vw 0;
 }
 
+#section2 .text-wrap {
+    color: #fff;
+    font-family: 'NeoGeoTrial-Light';
+    max-width: 1200px;
+    margin: 0 auto;
+    font-size: 90px;
+    line-height: 1.4;
+    /* border: 1px solid #fff; */
+}
+
+#section2 .text-wrap .sp1 {
+    width: 300px;
+    height: 80px;
+    background-color: #ccc;
+    display: inline-block;
+    border-radius: 80px;
+    vertical-align: -11px;
+    margin-right: 5px;
+    background-image: url(https://images.unsplash.com/photo-1686642848560-e980295a9360?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+#section2 .text-wrap .sp2 {
+    width: 300px;
+    height: 80px;
+    background-color: #ccc;
+    display: inline-block;
+    border-radius: 80px;
+    vertical-align: -11px;
+    margin-right: 5px;
+    background-image: url(https://images.unsplash.com/photo-1682711274476-02947d6b4699?q=80&w=2487&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+
+}
+
+#section2 .text-wrap .sp3 {
+    width: 360px;
+    height: 80px;
+    background-color: #ccc;
+    display: inline-block;
+    border-radius: 80px;
+    vertical-align: -11px;
+    margin-right: 5px;
+    background-image: url(https://images.unsplash.com/photo-1720463830375-dd759ccca3b4?q=80&w=2370&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+#section2 .love {
+    font-size: 16px;
+    text-align: center;
+    padding: 20vw 0 15vw;
+    font-family: 'Abel';
+    color: #fff;
+    overflow: hidden;
+    line-height: 1;
+}
+
+#section2 .love .line {
+    overflow: hidden;
+}
+
+#section2 .right {
+    width: 50vw;
+    color: #fff;
+    margin-left: auto;
+    padding-right: 5vw;
+    font-size: 26px;
+    font-family: 'NeoGeoTrial-Light';
+    margin-bottom: 10vw;
+
+}
+
+#section2 .img {
+    display: flex;
+    align-items: flex-end;
+    color: #fff;
+    padding: 0 4vw 0 7vw;
+}
+
+#section2 .img .face {
+    width: 50%;
+    margin-right: 3vw;
+}
+
+#section2 .img .ment {
+    width: 40%;
+    font-family: 'IropkeBatang';
+    line-height: 1.6;
+
+}
 
 @media (max-width: 960px) {
     #section1 .eye {
