--- a/황인지/assets/reset.css
+++ b/황인지/assets/reset.css
@@ -1,19 +1,22 @@
-@import url('https://fonts.cdnfonts.com/css/fruit-punch-2');
-@import url('https://websfont.github.io/websfont/websfont.css');
+@import url("https://fonts.cdnfonts.com/css/fruit-punch-2");
+@import url("https://websfont.github.io/websfont/websfont.css");
+@import url("https://fonts.googleapis.com/css2?family=Abel&display=swap");
 
 @font-face {
-    font-family: 'IropkeBatang';
+    font-family: "IropkeBatang";
     font-weight: normal;
     font-style: normal;
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot');
-    src: url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot?#iefix') format('embedded-opentype'),
-        url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff2') format('woff2'),
-        url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff') format('woff'),
-        url('https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.ttf') format("truetype");
+    src: url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot");
+    src: url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.eot?#iefix")
+            format("embedded-opentype"),
+        url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff2")
+            format("woff2"),
+        url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.woff")
+            format("woff"),
+        url("https://cdn.jsdelivr.net/gh/webfontworld/iropke/IropkeBatang.ttf")
+            format("truetype");
     font-display: swap;
 }
-
-
 
 /* border-box 초기화 */
 *,
@@ -72,7 +75,9 @@ textarea {
     font-size: 16px;
     line-height: 1.4;
     color: #202020;
-    font-family: NexonLv1GothicLow, -apple-system, BlinkMacSystemFont, "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo", sans-serif;
+    font-family: NexonLv1GothicLow, -apple-system, BlinkMacSystemFont,
+        "Malgun Gothic", "맑은 고딕", helvetica, "Apple SD Gothic Neo",
+        sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
