--- a/황인지/assets/style.css
+++ b/황인지/assets/style.css
@@ -4,43 +4,278 @@
     top: 0;
     width: 100%;
     z-index: 10000;
-    color: #8CF4A1;
-    background-color: #f4fff61d;
+    color: #8cf4a1;
+    /* background-color: #f4fff61d;
+    backdrop-filter: blur(10px); */
     display: none;
 }
 
 #header h1 {
-    font-family: 'lotteriaDdag';
+    font-family: "okDdung";
+    font-weight: 100;
     text-transform: uppercase;
     font-size: 30px;
     line-height: 1;
     margin: 5px;
+    padding: 20px;
 }
 
 #section1 {
-    height: 100vh;
     width: 100%;
     background-color: #000;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    padding-bottom: 10vh;
 }
+.texTitle {
+    width: 100%;
+    height: 20vh;
+    border-bottom: 1px solid #8cf4a1;
 
-#section1 .text {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 1600px;
+    width: 1330px;
+    margin: 0 auto;
+    margin-bottom: 5vh;
 }
-
-#section1 .text span {
-    font-family: 'FRUIT-PUNCH';
-    color: #8CF4A1;
-    font-size: 80px;
-    line-height: 1.1;
+.textWrap {
+    text-align: center;
+}
+.textWrap ul {
+    width: 1330px;
+    overflow: hidden;
+}
+.textWrap ul li {
+    float: left;
+    width: 70px;
+    height: 100px;
+    list-style: none;
+    font-family: fruit-punch;
+    font-size: 87px;
+    line-height: 1.2;
+    text-align: center;
+    text-shadow: -1px 0 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, 0 1px 0 #fff;
+    color: #000;
 }
 
 #section2 {
-    background-color: #ccc;
     height: 2000px;
+
+    background-color: #000;
+}
+#section2 .container {
+    width: 1320px;
+    margin: 0 auto;
+}
+#section2 .about {
+    width: 100%;
+    height: 400px;
+    background-color: #ececec;
+    border-radius: 20px;
+    text-align: center;
+    padding: 2rem;
+}
+
+#section2 .about h3 {
+    font-family: "Abel";
+    margin-bottom: 20px;
+    font-size: 14px;
+}
+#section2 .about p {
+    font-family: "IropkeBatang";
+    margin-bottom: 30px;
+}
+
+#section2 .about .desc {
+    display: flex;
+    justify-content: space-between;
+}
+#section2 .about .desc .lineBox {
+    width: 24%;
+    height: 200px;
+    /* border: 1px solid #ccc; */
+}
+#section2 .about .desc .text {
+    padding: 20px;
+}
+#section2 .about .desc .text span {
+    font-size: 12px;
+    color: #777;
+    font-family: "Abel";
+    margin-bottom: 10px;
+    display: inline-block;
+}
+#section2 .about .desc .text h4 {
+    font-size: 40px;
+    margin-bottom: 10px;
+    background-image: url(../assets/img/t1.svg);
+    background-size: 80%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+#section2 .about .desc .text h4 .ir {
+    color: transparent;
+}
+
+@media (max-width: 1400px) {
+    .textWrap ul {
+        width: 1260px;
+    }
+    .textWrap ul li.t1-19,
+    .textWrap ul li.t2-19,
+    .textWrap ul li.t3-19,
+    .textWrap ul li.t4-19,
+    .textWrap ul li.t5-19,
+    .textWrap ul li.t6-19 {
+        display: none;
+    }
+}
+
+@media (max-width: 1300px) {
+    .textWrap ul {
+        width: 1190px;
+    }
+    .textWrap ul li.t1-18,
+    .textWrap ul li.t2-18,
+    .textWrap ul li.t3-18,
+    .textWrap ul li.t4-18,
+    .textWrap ul li.t5-18,
+    .textWrap ul li.t6-18 {
+        display: none;
+    }
+}
+
+@media (max-width: 1200px) {
+    .textWrap ul {
+        width: 1120px;
+    }
+    .textWrap ul li.t1-17,
+    .textWrap ul li.t2-17,
+    .textWrap ul li.t3-17,
+    .textWrap ul li.t4-17,
+    .textWrap ul li.t5-17,
+    .textWrap ul li.t6-17 {
+        display: none;
+    }
+}
+
+.textWrap ul li.t1-1,
+.textWrap ul li.t2-2,
+.textWrap ul li.t3-3,
+.textWrap ul li.t4-4,
+.textWrap ul li.t5-5,
+.textWrap ul li.t6-6,
+.textWrap ul li.t1-4,
+.textWrap ul li.t2-5,
+.textWrap ul li.t3-6,
+.textWrap ul li.t4-7,
+.textWrap ul li.t5-8,
+.textWrap ul li.t6-9 {
+    color: #8cf4a1;
+    text-shadow: -1px 0 0 #8cf4a1, 0 -1px 0 #8cf4a1, 1px 0 0 #8cf4a1,
+        0 1px 0 #8cf4a1;
+}
+
+.lineBox {
+    position: relative;
+}
+
+.lineBox .line {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+.lineBox .line span:nth-child(1) {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    left: 4px;
+    top: 4px;
+    transform: rotate(45deg);
+    border-left: 1px solid #000;
+}
+.lineBox .line span:nth-child(1)::before {
+    content: "";
+    width: 30px;
+    height: 1px;
+    background-color: #000;
+    position: absolute;
+    left: 0;
+    top: 20px;
+    transform: rotate(45deg);
+    transform-origin: top left;
+}
+.lineBox .line span:nth-child(1)::after {
+    content: "";
+    width: 30px;
+    height: 1px;
+    background-color: #000;
+    position: absolute;
+    left: -1px;
+    top: 0;
+    transform: rotate(-45deg);
+    transform-origin: top left;
+}
+
+.lineBox .line span:nth-child(2) {
+    width: 20px;
+    height: 21px;
+    position: absolute;
+    right: 4px;
+    top: 4px;
+    transform: rotate(45deg);
+    border-top: 1px solid #000;
+}
+.lineBox .line span:nth-child(2)::before {
+    content: "";
+    width: 30px;
+    height: 1px;
+    background-color: #000;
+    position: absolute;
+    right: 15.5px;
+    top: 10px;
+    transform: rotate(-45deg);
+}
+.lineBox .line span:nth-child(2)::after {
+    content: "";
+    width: 30px;
+    height: 1px;
+    background-color: #000;
+    position: absolute;
+    right: -26px;
+    top: 10px;
+    transform: rotate(45deg);
+}
+.lineBox .line span:nth-child(3) {
+    width: 20px;
+    height: 21px;
+    position: absolute;
+    left: 4px;
+    bottom: 4px;
+    transform: rotate(45deg);
+    border-bottom: 1px solid #000;
+}
+.lineBox .line span:nth-child(3)::before {
+    content: "";
+    width: 30px;
+    height: 1px;
+    background-color: #000;
+    position: absolute;
+    left: -26px;
+    top: 10px;
+    transform: rotate(45deg);
+}
+.lineBox .line span:nth-child(3)::after {
+    content: "";
+    width: 1px;
+    height: 30px;
+    background-color: #000;
+    position: absolute;
+    right: -11px;
+    top: -6px;
+    transform: rotate(45deg);
+}
+.lineBox .line span:nth-child(4) {
 }
